typescript/checker/tests/conformance/async/es5/functionDeclarations/asyncFunctionDeclaration1_es5.ts.stderr
error: unimplemented
expand_export_info(Promise)
File: $DIR/tests/conformance/async/es5/functionDeclarations/asyncFunctionDeclaration1_es5.ts
 --> $DIR/tests/conformance/async/es5/functionDeclarations/asyncFunctionDeclaration1_es5.ts:4:1
  |
4 | / async function foo(): Promise<void> {
5 | | }
  | |_^

error: ReturnRequired {
    span: Span {
        lo: BytePos(
            88,
        ),
        hi: BytePos(
            103,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/async/es5/functionDeclarations/asyncFunctionDeclaration1_es5.ts:4:21
  |
4 | async function foo(): Promise<void> {
  |                     ^^^^^^^^^^^^^^^

